tests/expectations/compiler/finalize/rand_not_in_finalize.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372067]: This operation can only be used in an async function block.
    --> compiler-test:8:25
     |
   8 |         let a: scalar = ChaCha::rand_scalar();
     |                         ^^^^^^^^^^^^^^^^^^^^^
"""]
